# synth-pdb

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  README.md  ROADMAP_NMR_INTEGRATION.md  ROADMAP_TUTORIALS.md  bmr6457.json  code_review_report.md  custom_peptide_GATAAAAK_20260307_214711.fasta  fix_idp.py  fix_idp_py.py  fix_widget.py  index.html  index.md  message.txt  mkdocs.yml  msa_proposal.md  msa_screenshot_placeholder.py  objects.inv  publish.sh  pyproject.toml  requirements-docs.txt  ruff_errors.json  setup.py  sitemap.xml  streamlit_app.py
.github/: PULL_REQUEST_TEMPLATE.md  TOPICS.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy_docs.yaml  docs.yml  publish.yml  test.yml  test_notebooks_colab.yml
about/changelog/: changelog.md  index.html
about/citation/: citation.md  index.html
about/license/: index.html
about/roadmap/: index.html  roadmap.md
api/analysis/: analysis.md  index.html
api/batch_generator/: batch_generator.md  index.html
api/benchmark/: index.html
api/benchmark_metrics/: index.html
api/biophysics/: biophysics.md  index.html
api/bmrb_api/: index.html
api/cd_simulator/: index.html
api/chemical_shifts/: index.html
api/cofactors/: cofactors.md  index.html
api/contact/: index.html
api/coupling/: index.html
api/cryo_em/: index.html
api/data/: index.html
api/dataset/: dataset.md  index.html
api/decoys/: index.html
api/distogram/: index.html
api/docking/: docking.md  index.html
api/ensemble/: ensemble.md  index.html
api/evolution/: index.html
api/export/: index.html
api/generator/: index.html
api/geometry/: geometry.md  index.html
api/j_coupling/: index.html
api/llm/: index.html
api/main/: index.html
api/msa/: index.html  msa.md
api/nef_io/: index.html
api/nmr/: index.html
api/orientogram/: index.html
api/overview/: index.html  overview.md
api/packing/: index.html  packing.md
api/pdb_utils/: index.html
api/physics/: index.html  physics.md
api/plm/: index.html
api/quality/: index.html
benchmarks/: bench_results.csv  optimization_benchmark.py  performance_suite.py  plot_results.py
bioconda_recipe/: meta.yaml
contributing/: index.html
docs/: index.md  ml_integration  ml_loading  nmr.md  physics.md  technical_notes.md  tutorials  usage.md
examples/: analyze_distance_distribution.py  bmr6457.str  demo_force_ssbond.py  generate_egf.py  measure_ssbond_probability.py  parse_test.py  test_steering.py  validate_pre_pro_energy.py
incubator/: README.md  ncaa_roadmap.md
installation/: index.html
license/: index.html
nmr/: index.html  nmr.md
physics/: index.html  physics.md
scripts/: add_physics_comments.py  add_physics_comments2.py  add_type_annotations.py  benchmark_classifiers.py  benchmark_hardware.py  bmrb_benchmark_suite.py  build_multimodal_dataset.py  ci_notebook_startup.py  compare_gnn_diversity.py  download_ubiquitin_rdcs.py  experimental_benchmark.py  find_breaking_changes.sh  fix_gfp_notebook_ci.py  fix_physics_notes_and_return.py  generate_publication_figures.py  refactor_generator.py  refactor_physics.py  restore_all_educational_notes.py  run_benchmark.py  setup_colab_venv.sh  stress_test_gnn.py  test_notebooks_colab.sh  test_notebooks_local.sh  train_gnn_quality_filter.py  train_quality_filter.py
search/: search_index.json
synth_pdb/: __init__.py  analysis.py  batch_generator.py  benchmark.py  benchmark_metrics.py  biophysics.py  bmrb_api.py  cd_simulator.py  chemical_shifts.py  cofactors.py  contact.py  coupling.py  cryo_em.py  data.py  dataset.py  decoys.py  distogram.py  docking.py  evolution.py  export.py  generator.py  geometry.py  geometry.py.old  j_coupling.py  llm.py  main.py  msa.py  nef_io.py  nmr.py  orientogram.py  packing.py  pdb_utils.py  physics.py  plm.py  rdc.py  relaxation.py  saxs.py  score.py  scoring.py  special_chemistry.py  (+6 more)
technical_notes/: index.html  technical_notes.md
tests/: benchmark_numba.py  benchmark_physics.py  reproduce_disulfide_bug.py  test_analysis_extended.py  test_analysis_robustness.py  test_api_examples.py  test_assembly.py  test_batch_generator.py  test_batch_generator_coverage.py  test_benchmark_module.py  test_berberine_dna_validation.py  test_beta_turns.py  test_bfactor.py  test_bfactor_consistency.py  test_biophysical_validation.py  test_biophysics.py  test_biophysics_ext_coverage.py  test_bmrb_api_extended.py  test_bmrb_benchmark.py  test_bmrb_parsing.py  test_cd_simulation.py  test_chemical_shift_rmsd_thresholds.py  test_chemical_shifts.py  test_chemical_shifts_coverage.py  test_chemical_shifts_io.py  test_chemical_shifts_validation.py  test_chirality.py  test_cis_proline.py  test_cli_collisions.py  test_cli_scorecard.py  test_clustering.py  test_cofactors.py  test_comment_density.py  test_conformational_diversity.py  test_constraint_cutoff.py  test_contact.py  test_coordinate_limits.py  test_coupling.py  test_coverage_gaps.py  test_cryo_em.py  (+143 more)
tutorials/: alphafold_vs_nmr_dynamics.ipynb  bmrb_validation.ipynb  coevolution_msa_factory.ipynb  cryo_em_saxs_lab.ipynb  dataset_factory.ipynb  distance_geometry_lab.ipynb  executed_msa.ipynb  geometry_tools_reference.ipynb  gfp_molecular_forge.ipynb  gnn_plddt_explorer.ipynb  hard_decoy_challenge.ipynb  hormone_lab.ipynb  idp_ensemble_validation.ipynb  latent_space_explorer.ipynb  macrocycle_lab.ipynb  mirror_world_lab.ipynb  ml_handover_demo.ipynb  modern_formats_lab.ipynb  molecular_machine_lab.ipynb  nerf_geometry_lab.ipynb  neural_nmr_pipeline.ipynb  nmr_validation_rpf.ipynb  orientogram_lab.ipynb  ph_titration_lab.ipynb  plm_embeddings.ipynb  protein_quality_assessment.ipynb  ramachandran_explorer.ipynb  rdc_alignment_explorer.ipynb  sasa_hydrophobic_burial.ipynb  structure_defensibility_dashboard.ipynb  ubiquitin_chemical_shift_validation.ipynb  ubiquitin_j_coupling_validation.ipynb  ubiquitin_rdc_validation.ipynb  virtual_cd_lab.ipynb  virtual_nmr_spectrometer.ipynb
usage/: index.html  usage.md
visualization/: index.html
(+343 files in other folders)
