[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synth-pdb"
version = "1.36.0"
description = "Generate realistic PDB files with mixed secondary structures for bioinformatics testing, education and tool development"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "George Elkins", email = "george@example.com"}
]
keywords = [
    "pdb", 
    "protein", 
    "structure", 
    "bioinformatics", 
    "testing",
    "peptide-generation",
    "molecular-modeling",
    "ramachandran",
    "secondary-structure",
    "structural-biology",
    "protein-folding",
    "educational-tool",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Education",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

dependencies = [
    "numpy>=1.26.4,<2.3",
    "biotite>=0.35.0",
    "openmm>=8.1.0,!=8.5.0,!=8.5.1",
    "numba>=0.57.0",
    "synth-nmr>=0.9.0",
    "scipy>=1.7.0",
    "mrcfile>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest-mock>=3.10.0",
    "psutil>=5.9.0",
    "pre-commit>=3.0.0",
    "scikit-learn>=1.0.0",
    "joblib>=1.1.0",
    "pandas>=1.3.0",
    "torch>=2.0.0",
    "torch_geometric>=2.4.0",
    "transformers>=4.30.0",
    "pynmrstar",
    "requests",
    "types-requests",
    "mrcfile>=1.5.0",
]
test = [
    "pynmrstar",
    "requests",
    "hypothesis>=6.0.0",
]
ai = [
    "scikit-learn>=1.0.0",
    "joblib>=1.1.0",
    "pandas>=1.3.0",
]
gnn = [
    "torch>=2.0.0",
    "torch_geometric>=2.4.0",
    "scikit-learn>=1.0.0",  # for train/test split and classification_report in training script
    "joblib>=1.1.0",        # for saving/loading the Random Forest model alongside GNN artefacts
]
plm = [
    "torch>=2.0.0",
    "transformers>=4.30.0",  # HuggingFace Transformers for ESM-2 model
]
gui = [
    "streamlit>=1.30.0",
]
local-llm = [
    "llama-cpp-python>=0.2.0",
    "huggingface_hub>=0.20.0",
]

[project.scripts]
synth-pdb = "synth_pdb.main:main"

[project.urls]
Homepage = "https://github.com/elkins/synth-pdb"
Repository = "https://github.com/elkins/synth-pdb"
"Bug Tracker" = "https://github.com/elkins/synth-pdb/issues"
Documentation = "https://github.com/elkins/synth-pdb#readme"
Changelog = "https://github.com/elkins/synth-pdb/releases"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "scratch*", "benchmarks*", "examples*", "scripts*", "docs*"]

[tool.setuptools.package-data]
synth_pdb = ["py.typed", "quality/models/*.joblib", "quality/models/*.pt"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "N806",  # Uppercase variable names (common in scientific formulas)
    "N802",  # Uppercase function names (OpenMM/C++ style)
    "N803",  # Uppercase argument names
    "E741",  # Ambiguous variable names like 'l'
    "E402",  # Module level import not at top (common in notebooks)
    "I001",  # Import sorting (notebooks)
    "UP035", # Deprecated typing imports
    "UP006", # Deprecated typing generic aliases
    "B905",  # zip() without strict=
    "B007",  # Loop control variable not used
    "E701",  # Multiple statements on one line (colon)
    "E702",  # Multiple statements on one line (semicolon)
    "F401",  # Unused imports (common in tutorials/init)
    "E722",  # Bare except (sometimes needed in notebook mocks)
    "N816",  # MixedCase variable names in global scope
    "F821",  # Undefined names (ipython globals)
    "N812",  # Lowercase functional imported as F (torch idiom)
    "B904",  # raise from (not critical for tests)
    "B017",  # blind exception raises
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks tests as benchmarks",
    "network: marks tests that require network access (BMRB API, etc.)",
    "gnn: marks tests that require torch and torch_geometric",
]
filterwarnings = [
    "ignore:.*Passing None into shape arguments.*:DeprecationWarning",
    "ignore:.*invalid value encountered in divide.*:RuntimeWarning",
    "ignore:.*Input structure has no associated 'BondList'.*:UserWarning",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_errors = true
strict_equality = true
exclude = "(build/|scratch/)"

[[tool.mypy.overrides]]
module = "synth_pdb.*"
ignore_errors = false
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "joblib",
    "biotite.*",
    "numpy.*",
    "openmm.*",
    "scipy.*",
    "torch.*",
    "numba.*",
    "synth_nmr.*",
    "torch_geometric.*",
    "transformers.*",
    "setuptools",
    "pynmrstar",
    "sklearn.*",
    "mrcfile",
    "psutil",
    "matplotlib.*",
    "pandas",
    "llama_cpp",
    "huggingface_hub",
    "huggingface_hub.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["."]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
